# next-wasm

./: Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json
front-wasm/: Cargo.toml  LICENSE_MIT  build.sh
front-wasm/src/: engine.rs  lib.rs
front-wasm/src/engine/: sprite.rs
front-wasm/src/engine/sprite/: sprite.rs
src/app/: page.tsx
src/components/: CanvasComponent.tsx
