[package]
name = "front-wasm"
version = "0.1.0"
authors = ["konekotech <89322889+konekotech@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
futures = "0.3.30"
getrandom ={ version = "0.2.15", features = ["js"] }
wasm-bindgen-futures = "0.4.42"
serde = { version = "1.0.206", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'HtmlImageElement',
  'Response',
  'console',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
